# SCPIC

./: .gitignore  2D_f2_walkthrough.md  README.md  benchmark.py  dev_log.md  main.py  paper_benchmark_3d.py  pyproject.toml
docs/: api_reference.md  index.md  literature_review.md  methodology_3d.md  roadmap.md  space_time_couplings.md  user_guide.md  validation.md
docs/figures/: generate_2d_f2_workflow.py
epoch_tests/: README.md  analyse_local.py  analyse_local_3d.py  generate_profiles.py  generate_profiles_3d.py  run_local.py  run_local_3d.py
epoch_tests/cases/phase_ramp/: input.deck
epoch_tests/cases/scpic_focus/: input.deck
epoch_tests/cases/static_gaussian/: input.deck
epoch_tests/cases_3d/phase_tilt_3d/: input.deck
epoch_tests/cases_3d/scpic_focus_3d/: input.deck
epoch_tests/cases_3d/static_gaussian_3d/: input.deck
src/scpic/: __init__.py  broadband.py  cli.py  convergence.py  diagnostics.py  export.py  fields.py  mirrors.py  profile2d.py  pulse.py  solvers.py
tests/: test_advanced_3d.py  test_campaign_2d.py  test_dumont_features.py  test_jolly_features.py  test_scpic.py  test_scpic_3d.py
