[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scpic"
version = "0.1.0"
description = "Stratton-Chu integral evaluator for arbitrary mirror geometries to interface with EPOCH PIC."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Developer" }
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.6.0",
    "matplotlib>=3.5.0",
    "numba>=0.55.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0"
]

# This tells Hatchling exactly where to find the scpic package
[tool.hatch.build.targets.wheel]
packages = ["src/scpic"]