[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scpic"
version = "0.1.0"
description = "Stratton-Chu integral evaluator for arbitrary mirror geometries to interface with EPOCH PIC."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Developer" }
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0"
]

[project.scripts]
scpic-generate-epoch2d = "scpic.cli:generate_epoch2d_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "matplotlib>=3.5.0"
]
mpi = [
    "mpi4py>=3.1.0"
]

# This tells Hatchling exactly where to find the scpic package
[tool.hatch.build.targets.wheel]
packages = ["src/scpic"]

[tool.pytest.ini_options]
pythonpath = ["."]
